Sush, pulkit | #00 | Fixing integration tests, flyway cycle